--- a/Callcenter/appsettings.Development.json
+++ b/Callcenter/appsettings.Development.json
@@ -5,5 +5,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "MongoDbConf": {
+    "Connection": "mongodb://127.0.0.1/",
+    "DbName": "Callcenter"
   }
 }
