--- a/Callcenter/appsettings.json
+++ b/Callcenter/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "MongoDbConf": {
+    "Connection": "",
+    "DbName": ""
+  },
   "AllowedHosts": "*"
 }
