--- a/Callcenter/Callcenter.csproj
+++ b/Callcenter/Callcenter.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CaptchaGen.NetCore" Version="1.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
+    <PackageReference Include="runtime.linux-x64.CoreCompat.System.Drawing" Version="1.0.0-beta009" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\captcha\" />
   </ItemGroup>
 
 </Project>
