--- a/Callcenter/Callcenter.csproj
+++ b/Callcenter/Callcenter.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="CaptchaGen.NetCore" Version="1.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
-    <PackageReference Include="runtime.linux-x64.CoreCompat.System.Drawing" Version="1.0.0-beta009" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
