--- a/Callcenter/Callcenter.csproj
+++ b/Callcenter/Callcenter.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\NotifikationTyps\" />
+  </ItemGroup>
+
 </Project>
